sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Fulfilment_Task__c/PLS_FB_Fulfilment_Task__c.object-meta.xml
<CustomObject>
    <label>PLS FB Fulfilment Task</label>
    <nameField>
        <displayFormat>TASK-{00000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLS FB Fulfilment Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>