sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Fulfilment_Task__c/fields/PLS_FB_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>