sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Fulfilment_Task__c/fields/PLS_FB_Order__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>PLS_FB_Order__c</referenceTo>
    <relationshipLabel>PLS FB Fulfilment Tasks</relationshipLabel>
    <relationshipName>Fulfilment_Tasks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>