sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Fulfilment_Task__c/fields/PLS_FB_Status__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>