sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Fulfilment_Task__c/fields/PLS_FB_Type__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>